--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "src/nocsim/DRAMSim2"]
 	path = src/nocsim/sim/DRAMSim2
 	url = https://github.com/umd-memsys/DRAMSim2.git
+[submodule "timeloop"]
+	path = timeloop
+	url = https://github.com/BraSDon/timeloop.git
+	branch = fix/cosa-legacy
